--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,12 @@ services:
   # Application Dockerfile is in same folder which is .
   app:
     build: .
-
+    ports:
+      - 3000:3000
   # db is is db folder
   db:
     build: db/.
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    ports:
+      - 3306:3306
